// Jest Snapshot v1, https://goo.gl/fbAQLP

<<<<<<< HEAD
exports[`Storyshots Cards/SchoolCard default 1`] = `
<a
  className="cardLinkOverrides"
  href="https://sabio.la/veterans"
  rel="noopener noreferrer"
  target="_blank"
>
  <span
    className="screenReaderOnly"
  >
    Opens in new window
  </span>
  <article
    className="Card SchoolCard animatedCard"
  >
    <template
      className="content"
    >
      <img
        alt="Sabio Logo"
        className="logo"
        src="https://s3.amazonaws.com/operationcode-assets/codeSchoolLogos/sabio.png"
      />
      <section
        className="schoolCardText"
      >
        <h5
          className="name"
        >
          Sabio
        </h5>
        <address
          className="location"
        >
          Culver City, 
          CA
        </address>
        <ul
          className="info"
        >
          <li>
            GI Bill Accepted: 
            <b>
              Yes
            </b>
          </li>
          <li>
            Commitment: 
            <b>
              Full-Time
            </b>
          </li>
          <li>
            Hardware Included: 
            <b>
              No
            </b>
          </li>
        </ul>
      </section>
    </template>
  </article>
</a>
=======
exports[`Storyshots Cards/SchoolCard with many locations 1`] = `
<article
  className="Card SchoolCard"
>
  <h5>
    General Assembly
  </h5>
  <img
    alt="General Assembly logo"
    src="https://s3.amazonaws.com/operationcode-assets/codeSchoolLogos/general_assembly.jpg"
  />
  <div
    className="interactionsContainer"
  >
    <a
      className="Button primary"
      href="https://generalassembly.com"
      onClick={[Function]}
    >
      Go To Website
    </a>
    <button
      className="Button primary"
      disabled={false}
      onClick={[Function]}
      tabIndex={0}
      type="button"
    >
      See Locations
    </button>
  </div>
  <hr
    className="divider"
  />
  <div
    className="detailsRow"
  >
    <figure
      className="Badge codeSchoolCardIcon active"
    >
      <svg />
      <figcaption
        className="label"
      >
        G.I. Bill
      </figcaption>
    </figure>
    <figure
      className="Badge codeSchoolCardIcon active"
    >
      <svg />
      <figcaption
        className="label"
      >
        Online
      </figcaption>
    </figure>
    <figure
      className="Badge codeSchoolCardIcon active"
    >
      <svg />
      <figcaption
        className="label"
      >
        In-Person
      </figcaption>
    </figure>
  </div>
  <div
    className="detailsRow"
  >
    <figure
      className="Badge codeSchoolCardIcon disabled"
    >
      <svg />
      <figcaption
        className="label"
      >
        Equipment
      </figcaption>
    </figure>
    <figure
      className="Badge codeSchoolCardIcon disabled"
    >
      <svg />
      <figcaption
        className="label"
      >
        Housing
      </figcaption>
    </figure>
  </div>
</article>
`;

exports[`Storyshots Cards/SchoolCard with no physical locations 1`] = `
<article
  className="Card SchoolCard"
>
  <h5>
    Thinkful
  </h5>
  <img
    alt="Thinkful logo"
    src="https://s3.amazonaws.com/operationcode-assets/codeSchoolLogos/thinkful.jpg"
  />
  <div
    className="interactionsContainer"
  >
    <a
      className="Button primary"
      href="https://thinkful.com"
      onClick={[Function]}
    >
      Go To Website
    </a>
    <span
      className="singleLocationText"
    >
      Online Only
    </span>
  </div>
  <hr
    className="divider"
  />
  <div
    className="detailsRow"
  >
    <figure
      className="Badge codeSchoolCardIcon disabled"
    >
      <svg />
      <figcaption
        className="label"
      >
        G.I. Bill
      </figcaption>
    </figure>
    <figure
      className="Badge codeSchoolCardIcon active"
    >
      <svg />
      <figcaption
        className="label"
      >
        Online
      </figcaption>
    </figure>
    <figure
      className="Badge codeSchoolCardIcon disabled"
    >
      <svg />
      <figcaption
        className="label"
      >
        In-Person
      </figcaption>
    </figure>
  </div>
  <div
    className="detailsRow"
  >
    <figure
      className="Badge codeSchoolCardIcon disabled"
    >
      <svg />
      <figcaption
        className="label"
      >
        Equipment
      </figcaption>
    </figure>
    <figure
      className="Badge codeSchoolCardIcon disabled"
    >
      <svg />
      <figcaption
        className="label"
      >
        Housing
      </figcaption>
    </figure>
  </div>
</article>
`;

exports[`Storyshots Cards/SchoolCard with one location 1`] = `
<article
  className="Card SchoolCard"
>
  <h5>
    Code Immersives
  </h5>
  <img
    alt="Code Immersives logo"
    src="https://s3.amazonaws.com/operationcode-assets/codeSchoolLogos/code_immersives.jpg"
  />
  <div
    className="interactionsContainer"
  >
    <a
      className="Button primary"
      href="https://codeimmersives.com"
      onClick={[Function]}
    >
      Go To Website
    </a>
    <span
      className="singleLocationText"
    >
      Los Angeles, CA
    </span>
  </div>
  <hr
    className="divider"
  />
  <div
    className="detailsRow"
  >
    <figure
      className="Badge codeSchoolCardIcon disabled"
    >
      <svg />
      <figcaption
        className="label"
      >
        G.I. Bill
      </figcaption>
    </figure>
    <figure
      className="Badge codeSchoolCardIcon disabled"
    >
      <svg />
      <figcaption
        className="label"
      >
        Online
      </figcaption>
    </figure>
    <figure
      className="Badge codeSchoolCardIcon active"
    >
      <svg />
      <figcaption
        className="label"
      >
        In-Person
      </figcaption>
    </figure>
  </div>
  <div
    className="detailsRow"
  >
    <figure
      className="Badge codeSchoolCardIcon active"
    >
      <svg />
      <figcaption
        className="label"
      >
        Equipment
      </figcaption>
    </figure>
    <figure
      className="Badge codeSchoolCardIcon disabled"
    >
      <svg />
      <figcaption
        className="label"
      >
        Housing
      </figcaption>
    </figure>
  </div>
</article>
>>>>>>> 1e3818fe1ed61deeda96881e0e7a718d44c1dd4e
`;
